--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -141,6 +141,14 @@ p {
     border-radius: 10px;
     padding: 120px 40px 40px 40px;
 }
+.image-vr{
+    border-radius: 5%; /* Makes the image oval/circular if the aspect ratio is equal */
+    border: 5px solid #000;
+    width: 100%;
+    height: auto;
+    max-width: 800px;     
+    padding: 0;
+}
 
 .text-container {
     flex: 0.5; 
