--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -37,13 +37,14 @@ p {
 }
 
 .logo {
-    background-color: red;
-    color: white;
-    padding: 15px 25px; 
-    font-weight: bold;
-    font-size: 24px; 
-    margin-right: auto; 
-}
+    background-image: url('logo.png');
+    background-size: contain; /* Adjusts the image to fit within the div */
+    background-repeat: no-repeat;
+    background-position: center; /* Centers the image */
+    width: 300px; /* Adjust to the size of your logo */
+    height: 100px; /* Adjust to the height of your logo */
+  }
+  
 .person-icon, .flag-icon {
     width: 50px;
     height: 50px;
