--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -37,15 +37,20 @@ p {
 }
 
 .logo {
+     /* Allow the logo width to adjust based on its natural size */
+    /* Set the height to prevent it from getting too large */
+    max-width: 200px; /* Set a max-width for the logo */
+    max-height: 100%; /* Makes sure it doesn't exceed the navbar height */
+    width: auto;
+    height: 100px;
+    display: block;
     background-image: url('logo.png');
-    background-size: contain; /* Ensures the image is contained */
+    background-size: contain; /* Adjusts the image to fit within the div */
     background-repeat: no-repeat;
     background-position: center; /* Centers the image */
-    width: auto; /* Maintain the logo's natural width */
-    height: 100%; /* Fill the navbar height, but scale according to its aspect ratio */
-    max-height: 80px; /* Optional: restricts max height of logo */
-    max-width: 100%; /* Prevents logo from becoming too wide */
-}
+    border-radius: 50px;
+
+  }
   
 .person-icon, .flag-icon {
     width: 50px;
