--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -6,7 +6,6 @@ General Reset
 }
 
 body {
-    padding-top: 100px;
     font-family: Arial, sans-serif;
     background-color: #cecdcd;
     height: 100vh; 
@@ -152,13 +151,23 @@ p {
     padding: 120px 40px 40px 40px;
 }
 .image-vr{
-    border-radius: 10px; /* Makes the image oval/circular if the aspect ratio is equal */
+    border-radius: 20px; /* Makes the image oval/circular if the aspect ratio is equal */
     border: 5px solid #000;
     width: 100%;
     height: auto;
     max-width: 800px;     
     padding: 0;
 }
+.vr-content{
+    flex: 0.5; 
+    max-width: 50%; 
+    padding: 0; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    text-align: left; 
+ } 
 
 .text-container {
     flex: 0.5; 
