--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -37,11 +37,8 @@ p {
 }
 
 .logo {
-     /* Allow the logo width to adjust based on its natural size */
-    /* Set the height to prevent it from getting too large */
     max-width: 200px; /* Set a max-width for the logo */
-    max-height: 100%; /* Makes sure it doesn't exceed the navbar height */
-    width: auto;
+    max-height: 100%;
     height: 100px;
     display: block;
     background-image: url('logo.png');
